# swupdate-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: control.rs  error.rs  lib.rs  progress.rs  socket.rs  types.rs  wire.rs
tests/: c_compat.rs
tests/c_compat/: compat_test.c
tests/c_compat/swupdate_headers/: network_ipc.h  progress_ipc.h  swupdate_status.h
tests/c_compat/swupdate_headers/packed/: progress_ipc.h
tests/c_compat/swupdate_headers/unpacked/: progress_ipc.h
